# snaro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  cmake-multi-platform.yml
include/snaro/: bentley_ottmann.hpp  point  point.hpp  segment  segment.hpp
include/snaro/details/: active_segment_queue.hpp  bentley_ottmann_consumer.hpp  event.hpp  event_queue.hpp  pixel.hpp  sweep_line.hpp
src/: active_segment_queue.cpp  bentley_ottmann.cpp  bentley_ottmann_consumer.cpp  event.cpp  event_queue.cpp  segment.cpp
test/: CMakeLists.txt
test/src/: active_segment_queue.cpp  event.cpp  event_queue.cpp  segment.cpp
